--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@typescript-eslint/parser": "^4.13.0",
 		"chai": "^4.2.0",
 		"eslint": "^7.17.0",
+		"express": "^4.17.3",
 		"mocha": "^8.2.1",
 		"ts-mocha": "^8.0.0",
 		"typescript": "^4.1.3"
@@ -33,7 +34,9 @@
 	},
 	"scripts": {
 		"build": "tsc -p tsconfig.json",
-		"test": "ts-mocha -p tsconfig.json test/**/*.spec.ts",
+		"test": "ts-mocha -p tsconfig.json test/unit/**/*.spec.ts",
+		"test-one": "ts-mocha -p tsconfig.json test/unit/Collection.spec.ts",
+		"test:server": "cd test/mock/server; node index.js",
 		"version": "npm run format && git add -A src"
 	},
 	"types": "build/index.d.ts",
