--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
 		"build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
 		"prepublish": "npm run tsc",
 		"test": "ts-mocha -p tsconfig.json test/unit/**/*.spec.ts test/unit/*.spec.ts ",
-		"test-one": "ts-mocha -p tsconfig.json test/unit/Model.spec.ts"
+		"test-one": "ts-mocha -p tsconfig.json test/unit/Collection.spec.ts"
 	},
 	"types": "build/esm/index.d.ts",
-	"version": "0.6.7"
+	"version": "0.6.8"
 }
