--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"dependencies": {
 		"@types/node-fetch": "^2.5.7",
 		"axios": "^0.21.4",
+		"form-data": "^4.0.0",
 		"https": "^1.0.0",
 		"node-fetch": "^2.6.0"
 	},
