--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "isolatedModules": false,
+        "lib": ["es2017", "dom"],
         "module": "commonjs",
         "moduleResolution": "node",
         "noImplicitAny": false,
