--- a/examples/basic-api/package.json
+++ b/examples/basic-api/package.json
@@ -25,7 +25,7 @@
 	},
 	"scripts": {
 		"build": "webpack --mode development --config webpack.config.js",
-		"serve": "cd public; http-server",
+		"serve": "cd public && http-server",
 		"watch": "webpack --watch --mode development --config webpack.config.js"
 	},
 	"types": "public/script/index.d.ts",
