--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
         "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
         "serve": "http-server",
         "test": "ts-mocha -p tsconfig.json test/unit/**/*.spec.ts test/unit/*.spec.ts ",
-        "test-one": "ts-mocha -p tsconfig.json test/unit/Collection.spec.ts"
+        "test-one": "ts-mocha -p tsconfig.json test/unit/Collection.spec.ts",
+        "watch": "tsc -p tsconfig.json -w"
     },
     "types": "build/esm/index.d.ts",
-    "version": "0.18.1"
+    "version": "1.0.0"
 }
